# dci-module-net

./: CMakeLists.txt
idl/: net.idl
idl/net/: address.idl  datagram.idl  endpoint.idl  error.idl  host.idl  link.idl  option.idl  route.idl  stream.idl
idl/net/datagram/: channel.idl
idl/net/stream/: channel.idl  client.idl  server.idl
src/: entry.cpp  host.cpp  host.hpp  ipResolver.cpp  ipResolver.hpp  link.cpp  link.hpp  links.cpp  links.hpp  optionsStore.cpp  optionsStore.hpp  pch.hpp  routes.cpp  routes.hpp
src/datagram/: channel.cpp  channel.hpp  sendBuffer.cpp  sendBuffer.hpp
src/engine/: rtnetlink.cpp  rtnetlink.hpp
src/enumerator/: netioapi.cpp  netioapi.hpp  rtnetlink.cpp  rtnetlink.hpp
src/ipResolver/: task.cpp  task.hpp
src/stream/: channel.cpp  channel.hpp  client.cpp  client.hpp  sendBuffer.cpp  sendBuffer.hpp  server.cpp  server.hpp
src/utils/: makeError.hpp  recvBuffer.cpp  recvBuffer.hpp  sockaddr.cpp  sockaddr.hpp
test/: datagram.cpp  links.cpp  resolve.cpp  stream.cpp
